Allow rufo.exe to be set at any scope

--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
                 "rufo.exe": {
                     "type": "string",
                     "default": "rufo",
-                    "description": "Path to invoke rufo",
-                    "scope": "application"
+                    "description": "Path to invoke rufo"
                 },
                 "rufo.useBundler": {
                     "type": "boolean",
